2006-04-19  David Reveman  <davidr@novell.com>

	* plugins/water.c:
	* plugins/cube.c:
	* src/texture.c:
	* src/paint.c:
	* src/main.c: Add strict-binding option.

2006-04-18  Dan Winship  <danw@novell.com>

	* src/event.c (handleEvent): Fix a crasher in the screenshot
	binding code (and rename some of the #defines to make them not so
	ridiculously long). Also temporarily hack around a bug in EV_KEY
	by putting the check for WINDOW_SCREENSHOT before the check for
	SCREENSHOT.

	* plugins/scale.c: Change the keybinding again, now to "Pause".
	(F11 is the "fullscreen mode" binding for many apps.)

	* plugins/compiz.schemas: update

	* plugins/gconf.c: 
	* plugins/gconf-compiz-utils.c: 
	* plugins/gconf-dump.c: Rearrange #includes to prevent warning
	about TRUE and FALSE being redefined

2006-04-18  David Reveman  <davidr@novell.com>

	* plugins/rotate.c (ROTATE_FLIPMOVE_DEFAULT): Changed to TRUE.

	* src/window.c (recalcWindowActions): Remove maximize and fullscreen
	actions when resizing isn't allowed.

	* gnome/window-decorator/gnome-window-decorator.c: Dynamic positioning
	of window buttons.

	* plugins/cube.c (readSvgToTexture): Fix typo.

	* plugins/resize.c: Constrain cursor movement to min/max window size.

	* src/window.c (constrainNewWindowSize): Fix aspect ratio calculations.

2006-04-17  David Reveman  <davidr@novell.com>

	* plugins/cube.c: Put PNG on top face by default.

	* images/Makefile.am: Remove window.png.
	Add novell.png.

	* include/compiz.h:
	* src/readpng.c: Add openImageFile.

	* plugins/cube.c: Support for PNGs on top face.
	Add scale image option which is used to determine if top face
	image should be scaled or not.

2006-04-15  David Reveman  <davidr@novell.com>

	* plugins/wobbly.c: Add modal dialog type to default list of windows
	that should be wobbly when moved.

	* plugins/water.c (SET): +1 for border.

2006-04-14  Dan Winship  <danw@novell.com>

	* plugins/gconf-dump.c: add "water" to gconfDeps
