@@ -1,5 +1,9 @@
 2006-04-19  David Reveman  <davidr@novell.com>
 
+	* include/compiz.h:
+	* src/main.c: Remove window-image option.
+
+	* include/compiz.h:
 	* plugins/water.c:
 	* plugins/cube.c:
 	* src/texture.c:
